--- a/Placemem/app/src/main/AndroidManifest.xml
+++ b/Placemem/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="dva217_grupp1.placemem" >
-
+    package="com.lesliedahlberg.placemem" >
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -15,6 +16,22 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".AddMemActivity"
+            android:label="@string/title_activity_add_mem"
+            android:parentActivityName=".MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.lesliedahlberg.placemem.MainActivity" />
+        </activity>
+        <activity
+            android:name=".ViewMem"
+            android:label="@string/title_activity_view_mem"
+            android:parentActivityName=".MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.lesliedahlberg.placemem.MainActivity" />
         </activity>
     </application>
 
