--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,35 +2,49 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.lesliedahlberg.placemem" >
 
-    <uses-sdk android:minSdkVersion="16"
+    <uses-sdk
+        android:minSdkVersion="16"
         android:targetSdkVersion="22" />
-    
+
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+
+    <android:uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <android:uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="18" /> <!-- Allows for using audio recording -->
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.lesliedahlberg.placemem.MainActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name"
             android:launchMode="singleTop" >
-            <meta-data android:name="android.app.searchable"
+            <meta-data
+                android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.SEARCH" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name="com.lesliedahlberg.placemem.AddMemActivity"
+            android:name=".AddMemActivity"
             android:label="@string/title_activity_add_mem"
-            android:parentActivityName="com.lesliedahlberg.placemem.MainActivity" >
+            android:parentActivityName=".MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.lesliedahlberg.placemem.MainActivity" />
+        </activity>
+        <activity
+            android:name=".RecordAudioActivity"
+            android:label="@string/title_activity_record_audio" >
         </activity>
     </application>
 
