--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,35 +2,51 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.lesliedahlberg.placemem" >
 
-    <uses-sdk android:minSdkVersion="16"
+    <uses-sdk
+        android:minSdkVersion="16"
         android:targetSdkVersion="22" />
-    
+
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="18" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.lesliedahlberg.placemem.MainActivity"
+            android:name=".MemActivity"
             android:label="@string/app_name"
-            android:launchMode="singleTop" >
-            <meta-data android:name="android.app.searchable"
-                android:resource="@xml/searchable" />
+            android:parentActivityName=".TripsActivity" >
+        </activity>
+        <activity
+            android:name=".AddMemActivity"
+            android:label="@string/title_activity_add_mem"
+            android:parentActivityName=".MemActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MemActivity" />
+        </activity>
+        <activity
+            android:name=".TripsActivity"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-                <action android:name="android.intent.action.SEARCH" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name="com.lesliedahlberg.placemem.AddMemActivity"
-            android:label="@string/title_activity_add_mem"
-            android:parentActivityName="com.lesliedahlberg.placemem.MainActivity" >
+            android:name=".AddTripActivity"
+            android:label="@string/title_activity_add_trip"
+            android:parentActivityName=".TripsActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.lesliedahlberg.placemem.MainActivity" />
+                android:value="com.lesliedahlberg.placemem.TripsActivity" />
         </activity>
     </application>
 
