--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,9 @@
     <android:uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <android:uses-permission
         android:name="android.permission.READ_EXTERNAL_STORAGE"
-        android:maxSdkVersion="18" /> <!-- Allows for using audio recording -->
+        android:maxSdkVersion="18" />
+
+    <!-- Allows for using audio recording -->
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
