--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         <activity
             android:name=".MemsActivity"
             android:label="@string/app_name"
+            android:launchMode="singleTop"
             android:parentActivityName=".TripsActivity" >
         </activity>
         <activity
